ARROW-12011: [C++] Fix crashes and incorrect results when printing extreme date values

The `arrow_vendored::date` library represents year numbers as a C short
and may silently wraparound its value
(but also throw an exception if the year has the value -32768).